# cargo-deliver

./: .gitignore  .goreleaser.yml  Cargo.toml  LICENSE  README.md
src/: main.rs
templates/: .goreleaser.yml
