[package]
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
name = "cargo-deliver"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
description = "Run goreleaser from Rust to deploy your Rust binaries to Github/Artifactory/Dockerhub"
documentation = "https://github.com/mre/cargo-deliver"
homepage = "https://github.com/mre/cargo-deliver"
keywords = [
    "cargo",
    "cargo-subcommand",
    "publish",
    "github",
    "goreleaser",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mre/cargo-deliver"
version = "0.2.0"

[dependencies]
cargo_metadata = "0.4.1"
duct = "0.9.2"
failure = "0.1.1"
failure_derive = "0.1.1"
lazy_static = "1.0.0"
rprompt = "1.0.3"
tera = "0.10.10"
